# toiminnot

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
actions/git_version/: Dockerfile  LICENSE.txt  README.md  action.yaml  entrypoint.sh  git_version.sh
actions/hermes/: README.md  action.yaml
actions/hermes-interactive/: README.md  action.yaml  action.yml
actions/hermes-interactive/prompts/: interactive-system.md
actions/hermes/runner/: pyproject.toml
actions/hermes/runner/src/hermes_runner/: __init__.py  __main__.py  agent.py  config.py  skills.py
actions/hermes/runner/tests/: conftest.py  test_agent.py  test_config.py  test_skills.py
actions/pre_commit/: README.md
actions/prek/: README.md  action.yaml
actions/pytest/: README.md  action.yaml
actions/twine_release/: README.md  action.yaml
actions/uv_build/: README.md  action.yaml
docstring-coverage-report/: action.yml  post_comment.py
poetry-auth-private-pypi/: action.yaml
poetry-private-pypi/: action.yaml
